k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: minu-pod
  labels:
    app: minu-app
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
